fixed styling with current collapse containers, fixed favoriting functionality (it broke so

--- a/src/App.css
+++ b/src/App.css
@@ -578,6 +578,7 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: all 0.3s ease-in-out;
   }
   
   .day-of-week-container {
